# libso

./: CMakeLists.txt  README.md
src/: error.c  ourhdr.h  resource.c
